# kladolov

./: DOCS.md  README.md
kladolov_back/: .gitignore  README.md  mix.exs
kladolov_back/config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
kladolov_back/lib/: kladolov_back.ex  kladolov_back_web.ex
kladolov_back/lib/kladolov_back/: application.ex  repo.ex
kladolov_back/lib/kladolov_back_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
kladolov_back/lib/kladolov_back_web/channels/: user_socket.ex
kladolov_back/lib/kladolov_back_web/views/: error_helpers.ex  error_view.ex
kladolov_back/priv/repo/: seeds.exs
kladolov_back/test/: test_helper.exs
kladolov_back/test/kladolov_back_web/views/: error_view_test.exs
kladolov_back/test/support/: channel_case.ex  conn_case.ex  data_case.ex
kladolov_core/: .gitignore  Cargo.toml
kladolov_core/src/: main.rs  utils.rs
kladolov_front/: package.json
