[package]
name = "kladolov_core"
version = "0.1.0"
authors = ["Ilya Druzhinin <ilya.druzh@gmail.com>"]
edition = "2018"

[features]
default = [ "secp-recovery" ]
base64 = [ "base64-compat" ]
fuzztarget = ["bitcoin_hashes/fuzztarget"]
unstable = []
rand = ["secp256k1/rand-std"]
# use-serde = ["serde", "bitcoin_hashes/serde", "secp256k1/serde"]
secp-lowmemory = ["secp256k1/lowmemory"]
secp-recovery = ["secp256k1/recovery"]

[dependencies]
# bitcoin = "0.23.0"
# secp256k1 = "0.17.2"
# secp256k1 = "0.20.0"
# num-bigint = "0.3.0"
# mysql = "18.2.0"
# serde = "1.0"
# serde_json = "1.0"
# serde_derive = "1.0"
# reqwest = "0.10.6"
# sha2 = "0.9.0"
# hex = "0.4.2"
# rand = { version = "0.7.3", default-features = false, optional = true }
# openssl = { version = "0.10", features = ["vendored"] }
# rand = "0.4"
# rustc-hex = "2"
# lazy_static = "1.4.0"
# base58 = "0.1"
# eth-secp256k1 = { git = "https://github.com/ethcore/rust-secp256k1" }
# bitcrypto = { path = "../crypto" }
# primitives = { path = "../primitives" }
bech32 = "0.7.2"
bitcoin_hashes = "0.9.1"
secp256k1 = "0.20.0"
base64-compat = { version = "1.0.0", optional = true }
bitcoinconsensus = { version = "0.19.0-1", optional = true }
# serde = { version = "1", features = [ "derive" ], optional = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bitcoin = "0.26.0"
reqwest = "0.9.18"
num-bigint = "0.2"
time = "0.2.26"
zip = "0.5"

[dev-dependencies]
# serde_json = "<1.0.45"
# serde_test = "1"
secp256k1 = { version = "0.20.0", features = [ "recovery", "rand-std" ] }
bincode = "1.3.1"
# We need to pin ryu (transitive dep from serde_json) to stay compatible with Rust 1.22.0
ryu = "<1.0.5"